--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,20 @@ h1 {
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
-.portrait {
- 
+.quotebox { 
+ text-align: center;
+  font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
+  color: gold; 
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  border-style: solid; 
+  background: black;
+  border-radius: 5px;
+  opacity: .75;
+  margin-left: 75px;
+  margin-right: 75px;
+  padding-bottom: 5px;
+}
+
+a {
+  color: gold;
 }
